[package]
name = "proxy-protocol"
version = "0.5.0"
authors = ["Mariell Hoversholm <proximyst@proximyst.com>"]
edition = "2018"

license = "MIT OR Apache-2.0"
description = "PROXY protocol serializer and deserializer"
documentation = "https://docs.rs/proxy-protocol/"
repository = "https://github.com/Proximyst/proxy-protocol.git"

[dependencies]
snafu = "~0.6"
bytes = "~1"

[dev-dependencies]
pretty_assertions = "^0.7"
rand = "~0.8"

[features]
default = []

always_exhaustive = []
